# mrf

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: release.yml  tests.yml
demos/: format.cast  organize.cast  rename.cast
src/: command.rs  elem.rs  formatter.rs  indices.rs  lib.rs  main.rs  matcher.rs  parser.rs  replacement.rs  replacer.rs  spec.rs  subcommands.rs  tokens.rs
src/subcommands/: exec.rs  map.rs  mv.rs  utils.rs
tests/: map.rs  mv.rs
