[package]
name = "mrf"
version = "0.1.0"
authors = ["Kerli Low <kerlilow@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/kerlilow/mrf"
repository = "https://github.com/kerlilow/mrf"
documentation = "https://docs.rs/mrf"
readme = "README.md"
description = "Move or copy files by pattern matching."

[lib]
path = "src/lib.rs"

[dependencies]
unicode-segmentation = "1.6.0"
nom = "5.1.2"
clap = { version = "3.0.0-beta.1", features = ["color"] }
dialoguer = "0.6.2"
atty = "0.2"
