[package]
name = "mrf"
version = "0.1.0"
authors = ["Kerli Low <kerlilow@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/kerlilow/mrf"
repository = "https://github.com/kerlilow/mrf"
documentation = "https://docs.rs/mrf"
readme = "README.md"
description = "Move or copy files by pattern matching."

[lib]
path = "src/lib.rs"

[dependencies]
nom = "5.1.2"
clap = { version = "3.0.0-beta.1", features = ["color"] }
ctrlc = "3.1.6"
console = "0.12.0"
dialoguer = "0.6.2"
indicatif = { version = "0.15.0", features = ["rayon"]}
atty = "0.2.14"
rayon = "1.3.1"
